# Yew-Reversi

./: Cargo.toml  index.html  reset-3d00be587470e1aa.css  reset.css  reversi-a1c839816fd6a0d9.js  reversi-a1c839816fd6a0d9_bg.wasm  styles-b9b7350d0a354909.css  styles.scss
.github/workflows/: gh-pages.yml
src/: bitboard.rs  main.rs  reversi.rs  route.rs
src/bitboard/: bitboard.rs  types.rs
src/components/: board.rs  status.rs
src/components/board/: board.rs  cell.rs  square.rs
src/components/status/: status.rs
src/reversi/: bitboard.rs  board.rs  board_behavior.rs  coordinate.rs  game.rs  square_state.rs  turn.rs
