[package]
name = "reversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
gloo-dialogs = "0.1.1"
gloo-console = "0.2.3"
